Fix horizontal scroll on mobile

--- a/src/components/LandingPage/styles/index.scss
+++ b/src/components/LandingPage/styles/index.scss
@@ -20,7 +20,6 @@
     }
 
     &:after {
-        background: url(../images/moon.svg);
         content: '';
         height: 539px;
         position: absolute;
@@ -32,6 +31,14 @@
         @media (min-width: 640px) {
             top: -5%;
             zoom: 1;
+        }
+    }
+}
+
+@media screen and (min-width: 1076px) {
+    .hero {
+        &:after {
+            background: url(../images/moon.svg);
         }
     }
 }
